Fix things:
- Long time bug of messed up menu. Conflict with Menu Icons plugin
- Improved admin notices and added nag about conflict with above plugin

--- a/src/assets/scss/_defaults.scss
+++ b/src/assets/scss/_defaults.scss
@@ -4,3 +4,9 @@
   -o-transition: color 0.3s;
   transition: color 0.3s;
 }
+
+.notice.cd {
+  .notice-dismiss {
+    display: none;
+  }
+}
